<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:background="@drawable/shape_custom_dialog"
              android:layout_width="@dimen/lo_width_custom_dialog"
              android:layout_height="@dimen/lo_height_custom_dialog">

    <ImageView
        android:id="@+id/img_dialog_des"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top_login"
        android:layout_width="@dimen/lo_width_height_img_ac_kitchen"
        android:layout_height="@dimen/lo_width_height_img_ac_kitchen"/>

    <TextView
        android:id="@+id/txt_dialog_name_des"
        android:layout_marginTop="@dimen/lo_margin_top_custom_dialog"
        android:text="@string/name_food"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/txt_size_ac_reg"
        android:textColor="@color/color_dark_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_dialog_cost_des"
            android:text="@string/cost_food"
            android:gravity="center"
            android:textSize="@dimen/txt_size_ac_reg"
            android:textStyle="italic|bold"
            android:textColor="@color/color_dark_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text=" VND"
            android:gravity="center"
            android:textSize="@dimen/txt_size_ac_reg"
            android:textStyle="italic|bold"
            android:textColor="@color/color_dark_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/five_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_minus_des_dialog"
            android:background="@color/colorPrimaryDark"
            android:layout_width="@dimen/margin_top_txt_ac_logo"
            android:layout_height="@dimen/margin_top_txt_ac_logo"
            android:layout_marginLeft="@dimen/margin_top_txt_ac_logo"
            android:layout_weight="1"
            android:text="@string/btn_minus_food_dialog"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_btn_cus"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_quantum_des_dialog"
            android:text="@string/quantum_food"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/txt_size_cus_dia"
            android:textColor="@color/color_dark_green"
            android:layout_weight="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_plus_des_dialog"
            android:text="@string/btn_plus_food_dialog"
            android:background="@color/colorPrimaryDark"
            android:layout_marginRight="@dimen/margin_top_txt_ac_logo"
            android:textSize="@dimen/txt_size_btn_cus"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_width="@dimen/margin_top_txt_ac_logo"
            android:layout_height="@dimen/margin_top_txt_ac_logo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_top_txt_ac_logo"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginRight="@dimen/margin_top_txt_ac_logo"
        android:layout_marginLeft="@dimen/margin_top_txt_ac_logo">

        <Button
            android:id="@+id/btn_cancel_dessert_dl"
            android:textSize="@dimen/txt_size_tieu_de_ac_logo"
            android:background="@color/color_green"
            android:text="@string/btn_cancel"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/lo_margin_left_right_cus_dia"/>

        <Button
            android:id="@+id/btn_add_des_dialog"
            android:text="@string/btn_add_food_dialog"
            android:textSize="@dimen/txt_size_tieu_de_ac_logo"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/lo_margin_left_right_cus_dia"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_top_txt_ac_logo"/>

    </LinearLayout>
</LinearLayout>