<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context="com.example.vuphi.loginregister.RegisterActivity">

    <EditText
        android:id="@+id/edt_employee_code"
        android:background="@drawable/shape_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lo_height_edt_ac_reg"
        android:hint="@string/edt_employee_code"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_marginTop="@dimen/margin_top_edt_ac_reg"
        android:ems="10"
        android:inputType="number"
        android:padding="@dimen/ten_dp"/>

    <EditText
        android:id="@+id/edt_last_first_name"
        android:background="@drawable/shape_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lo_height_edt_ac_reg"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:padding="@dimen/ten_dp"
        android:hint="@string/edt_last_first_name"
        android:layout_below="@+id/edt_employee_code"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/edtPassReg"
        android:background="@drawable/shape_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lo_height_edt_ac_reg"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:padding="@dimen/ten_dp"
        android:hint="@string/edtPassword"
        android:layout_below="@+id/edt_last_first_name"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edtConPassReg"
        android:background="@drawable/shape_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lo_height_edt_ac_reg"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:padding="@dimen/ten_dp"
        android:hint="@string/edtConfirmPass"
        android:layout_below="@+id/edtPassReg"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/txtPosition"
        android:layout_width="@dimen/margin_top_txt_ac_logo"
        android:layout_height="@dimen/lo_height_spn_ac_reg"
        android:textSize="@dimen/txt_size_ac_reg"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:text="@string/txtPosition"
        android:layout_below="@+id/edtConPassReg"
        android:layout_alignStart="@+id/edtConPassReg"
        android:layout_toStartOf="@+id/spn_position" />

    <Spinner
        android:id="@+id/spn_position"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/lo_height_spn_ac_reg"
        android:layout_alignTop="@+id/txtPosition"
        android:layout_alignStart="@+id/txtBackLog"/>

    <Button
        android:id="@+id/btnRegister"
        android:background="@drawable/shape_button"
        android:text="@string/btnRegister"
        android:textSize="@dimen/txt_size_login_ac"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_login"
        android:layout_below="@+id/spn_position"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtBackLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_txt_login_ac"
        android:text="@string/txtBackToLogin"
        android:textSize="@dimen/txt_size_login_ac"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imgRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_top_txt_ac_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_marginTop="@dimen/margin_top_img_ac_order"
        app:srcCompat="@drawable/image_register"/>

</RelativeLayout>
